@@ -5,6 +5,8 @@
   <!ENTITY checkfs            SYSTEM "checkfs.script"> 
   <!ENTITY cleanfs            SYSTEM "cleanfs.script"> 
   <!ENTITY console            SYSTEM "console.script"> 
+  <!ENTITY functions          SYSTEM "functions.script"> 
+  <!ENTITY consolelog         SYSTEM "consolelog.script"> 
   <!ENTITY halt               SYSTEM "halt.script"> 
   <!ENTITY localnet           SYSTEM "localnet.script"> 
   <!ENTITY modules            SYSTEM "modules.script"> 
@@ -24,7 +26,6 @@
   <!ENTITY createfiles        SYSTEM "createfiles.script"> 
   <!ENTITY modules_sys        SYSTEM "modules-sysinit.script"> 
   <!ENTITY rc_sys             SYSTEM "rc-sysinit.script"> 
-  <!ENTITY rc_site            SYSTEM "rc-site.script"> 
   <!ENTITY ifup               SYSTEM "ifup.script"> 
   <!ENTITY ifdown             SYSTEM "ifdown.script"> 
   <!ENTITY ipv4_static        SYSTEM "ipv4-static.script"> 
@@ -56,9 +57,19 @@
     <screen>&rc;</screen> 
   </sect1>
 
+  <sect1 id="functions" role="wrap">
+    <title>/etc/rc.d/init.d/functions</title>
+    <screen>&functions;</screen> 
+  </sect1>
+
   <sect1 id="mountvirtfs" role="wrap">
     <title>/etc/rc.d/init.d/mountvirtfs</title>
     <screen>&mountvirtfs;</screen> 
+  </sect1>
+
+  <sect1 id="consolelog" role="wrap">
+    <title>/etc/rc.d/init.d/consolelog</title>
+    <screen>&consolelog;</screen> 
   </sect1>
 
   <sect1 id="modules" role="wrap">
